SBT: decrease memory limit for unit tests